--- a/src/app/update-empleado/update-empleado.component.html
+++ b/src/app/update-empleado/update-empleado.component.html
@@ -1,31 +1,46 @@
 <h3>Update Employee</h3>
 <div [hidden]="submitted" style="width: 400px;">
-  <form (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="onSubmit()" #empForm="ngForm">
     <div class="form-group">
       <label for="dni">Dni</label>
-      <input type="text" class="form-control" id="dni" required [(ngModel)]="empleado.dni" name="dni">
+      <input type="text" class="form-control" id="dni" required [(ngModel)]="empleado.dni" name="dni" required maxlength="9" pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))" #dni="ngModel">
     </div>
+
+    <!-- Validacion dni -->
+    <div *ngIf="dni.invalid && (dni.dirty || dni.touched)" class="alert alert-danger">
+        <div *ngIf="dni.errors.required">Dni es obligatorio</div>
+        <div *ngIf="dni.errors.maxlength">El dni debe tener 9 caracteres como maximo</div>
+        <div *ngIf="dni.errors.pattern">El dni debe ser un dni valido</div>
+    </div>
+   
 
     <div class="form-group">
       <label for="nombre">Nombre</label>
-      <input type="text" class="form-control" id="nombre" required [(ngModel)]="empleado.nombre" name="nombre">
+      <input type="text" class="form-control" id="nombre"  [(ngModel)]="empleado.nombre" name="nombre">
     </div>
 
     <div class="form-group">
       <label for="sexo">Sexo</label>
-      <input type="text" class="form-control" id="sexo" required [(ngModel)]="empleado.sexo" name="sexo">
+      <input type="text" class="form-control" id="sexo"  [(ngModel)]="empleado.sexo" name="sexo" required maxlength="1" pattern="[MF]{1}" #sexo="ngModel">
     </div>
+
+     <!-- Comprobacion de sexo -->
+
+      <div *ngIf="sexo.invalid && (sexo.dirty || sexo.touched)" class="alert alert-danger"> 
+        <div *ngIf="sexo.errors.required">Sexo Requerido</div>
+        <div *ngIf="sexo.errors.pattern">El sexo solo puede ser M / F</div>
+      </div>
 
     <div class="form-group">
       <label for="categoria">Categoria</label>
-      <input type="text" class="form-control" id="categoria" required [(ngModel)]="empleado.categoria" name="categoria">
+      <input type="text" class="form-control" id="categoria" required [(ngModel)]="empleado.categoria" name="categoria" min="1" max="10">
     </div>
 
     <div class="form-group">
       <label for="anyos">Años</label>
-      <input type="text" class="form-control" id="anyos" required [(ngModel)]="empleado.anyos" name="anyos">
+      <input type="text" class="form-control" id="anyos" required [(ngModel)]="empleado.anyos" min="1" name="anyos">
     </div>
 
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success" [disabled]="!empForm.form.valid">Submit</button>
   </form>
 </div>
