--- a/src/app/update-empleado/update-empleado.component.html
+++ b/src/app/update-empleado/update-empleado.component.html
@@ -3,7 +3,7 @@
   <form (ngSubmit)="onSubmit()" #empForm="ngForm">
     <div class="form-group">
       <label for="dni">Dni</label>
-      <input type="text" class="form-control" id="dni" required [(ngModel)]="empleado.dni" name="dni" required maxlength="9" pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))" #dni="ngModel">
+      <input type="text" class="form-control" id="dni" required [(ngModel)]="empleado.dni" name="dni" required maxlength="9" readonly #dni="ngModel">
     </div>
 
     <!-- Validacion dni -->
@@ -16,7 +16,11 @@
 
     <div class="form-group">
       <label for="nombre">Nombre</label>
-      <input type="text" class="form-control" id="nombre"  [(ngModel)]="empleado.nombre" name="nombre">
+      <input type="text" class="form-control" id="nombre"  [(ngModel)]="empleado.nombre" name="nombre" #nombre="ngModel">
+    </div>
+
+    <div *ngIf="nombre.valid">
+        <div class="alert alert-success">Nombre valido</div>
     </div>
 
     <div class="form-group">
@@ -30,17 +34,34 @@
         <div *ngIf="sexo.errors.required">Sexo Requerido</div>
         <div *ngIf="sexo.errors.pattern">El sexo solo puede ser M / F</div>
       </div>
+      <div *ngIf="sexo.valid">
+          <div class="alert alert-success">Sexo valido</div>
+      </div>
 
     <div class="form-group">
       <label for="categoria">Categoria</label>
-      <input type="text" class="form-control" id="categoria" required [(ngModel)]="empleado.categoria" name="categoria" min="1" max="10">
+      <input type="number" class="form-control" id="categoria" required [(ngModel)]="empleado.categoria" name="categoria" min="1" max="10" pattern="^(?:[1-9]|0[1-9]|10)$" #categoria="ngModel"> 
+    </div>
+
+    <div *ngIf="categoria.invalid && (categoria.dirty || categoria.touched)" class="alert alert-danger"> 
+        <div *ngIf="categoria.errors.required">Categoria Requerida</div>
+        <div *ngIf="categoria.errors.pattern">La categoria solo puede ser un numero entre 1 - 10</div>
+    </div>
+    <div *ngIf="categoria.valid">
+        <div class="alert alert-success">Categoria valida</div>
     </div>
 
     <div class="form-group">
       <label for="anyos">Años</label>
-      <input type="text" class="form-control" id="anyos" required [(ngModel)]="empleado.anyos" min="1" name="anyos">
+      <input type="number" class="form-control" id="anyos" required [(ngModel)]="empleado.anyos" min="1" pattern="[0-9]{0,2}" name="anyos" #anyos="ngModel">
     </div>
-
+    <div *ngIf="anyos.invalid && (anyos.dirty || anyos.touched)" class="alert alert-danger"> 
+        <div *ngIf="anyos.errors.required">Años Requeridos</div>
+        <div *ngIf="anyos.errors.pattern">Los años solo pueden ser numeros positivos</div>
+    </div>
+    <div *ngIf="anyos.valid">
+        <div class="alert alert-success">Años valido</div>
+    </div>
     <button type="submit" class="btn btn-success" [disabled]="!empForm.form.valid">Submit</button>
   </form>
 </div>
